# rag

./: README.md  docker-compose.yaml  exemples.ipynb  pyproject.toml
scripts/: examples.py  weaviate_helper_functions.py
src/rag/: enums.py  factory.py  loader.py  utils.py
src/rag/chains/: __init__.py  builder.py  qa_image.py  qa_structured_image.py  qa_structured_with_context.py  qa_with_context.py  relevance_chain.py  validation_chain.py  weaviate_retriever.py
